src/App.css
.App {
  text-align: center;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  margin: 0;
  padding: 0;
  font: inherit;
}

:root {
  --fs-300: clamp(0.94rem, calc(0.92rem + 0.08vw), 0.98rem);
  --fs-400: clamp(1.13rem, calc(1.06rem + 0.33vw), 1.31rem);
  --fs-500: clamp(1.35rem, calc(1.21rem + 0.69vw), 1.75rem);
  --fs-600: clamp(1.62rem, calc(1.37rem + 1.24vw), 2.33rem);
  --fs-700: clamp(1.94rem, calc(1.54rem + 2.03vw), 3.11rem);
  --fs-800: clamp(2.33rem, calc(1.7rem + 3.15vw), 4.14rem);
  --fs-900: clamp(2.8rem, calc(1.85rem + 4.74vw), 5.52rem);
  font-family: roboto;

  --hue: 50;
  --saturation: 40%;

  --black: hsl(var(--hue), var(--saturation), 3%);
  --white: hsl(var(--hue), var(--saturation), 93%);
  --dark: hsl(var(--hue), var(--saturation), 15%);
  --bright: hsl(var(--hue), var(--saturation), 85%);

  --tr-slow: 0.7s ease-in-out;
  --tr-fast: 0.3s ease-in-out;

  --error: hsl(0, 100%, 66%);
  --success: hsl(108, 100%, 70%);
  --accent: hsl(var(--hue), 100%, 70%);

  --main-gradient: radial-gradient(
    circle 821px at 0.7% 1.8%,
    hsl(var(--hue), 80%, 60%) 0%,
    hsl(var(--hue), 90%, 40%) 30%,
    hsl(var(--hue), 100%, 25%) 100%
  );
}

html {
  /* color-scheme: dark light; */
  scroll-behavior: smooth;
}

body {
  min-height: 100svh;
}

img,
picture,
svg,
video {
  display: block;
  max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

p {
  text-wrap: pretty;
}

.flex {
  display: flex;
}

.column {
  flex-direction: column;
}

.row {
  flex-direction: row;
}

.page-wrapper {
  min-height: 100svh;
  max-width: 100svw;
}

.top-container {
  min-height: 100svh;
}

.header {
  box-sizing: border-box;
  min-height: 100px;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  background-image: var(--main-gradient);
  background-color: var(--dark);
  color: var(--dark);
}

.nav > * {
  margin-left: 2ch;
  text-shadow: 0px 0px 9px var(--dark);
  color: var(--white);
}

.footer {
  background-color: var(--dark);
  color: var(--white);
  min-height: 16px;
  padding: 16px;
}

.content-container {
  box-sizing: border-box;
  margin-bottom: auto;
  width: 100%;
  padding: 16px;
}

.catalog {
  width: 100%;
}

.composition-data-key,
.composition-data,
.edit-form {
  display: grid;
  width: 100%;
  column-gap: 12px;
  row-gap: 8px;
  grid-template-columns: 5ch 50% auto 16ch;
  /* border: 1px solid blue; */
}
.composition-data-key > * {
  padding: 8px;
}

.composition-data > * {
  display: flex;
  align-items: center;
  padding: 8px;
}

.work-title-wrapper {
  width: 100%;
  flex-direction: column;
  justify-content: center;
  box-sizing: border-box;
}

.title {
  font-size: 2rem;
  width: 100%;
  text-align: left;
  text-transform: capitalize;
}

.subtitle {
  font-size: 1rem;
  text-align: left;
  width: 100%;
}

.year {
  width: 5ch;
  align-items: center;
  justify-content: center;
}

.instrumentation {
  width: auto;
  text-align: left;
}

.category {
  width: 100%;
  justify-content: end;
  text-align: right;
  box-sizing: border-box;
}

.edit-form-wrapper {
  width: 100%;
  background-color: var(--white);
  box-sizing: content-box;
}

.edit-form {
  text-align: left;
}

.form-input {
  font-size: 1rem;
  margin: 4px 0px;
  text-align: left;
  overflow: visible;
}

label {
  font-size: 0.8rem;
  padding-bottom: 8px;
  text-transform: capitalize;
  /* border: 1px solid blue; */
}

input,
textarea {
  box-sizing: border-box;
}

hr {
  margin: 8px 0px;
}
.add-new-work-form {
  background-color: var(--white);
}
.add-new-work-title {
  background-color: var(--bright);
  padding: 16px;
  text-transform: uppercase;
  letter-spacing: 20%;
}

.composition-data-wrapper {
  width: 100%;
}
.composition-accordion-wrapper {
  background-color: var(--bright);
}
.composition-accordion-wrapper > * > * {
  box-sizing: border-box;
}

.edit-form {
  padding-top: 8px;
}
.edit-form > * {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: 0px 8px;
}

.edit-buttons-wrapper {
  width: 100%;
  justify-content: space-between;
  padding: 8px;
  box-sizing: border-box;
}

.edit-button-add,
.edit-button-delete,
.edit-button-update {
  padding: 8px 16px;
  border-radius: 4px;
  border: 1px solid var(--dark);
  cursor: pointer;
}

.edit-button-delete {
  background-color: var(--error);
  color: var(--white);
}

.edit-button-update {
  background-color: var(--success);
}

.edit-button-add {
  background-color: var(--accent);
}

.notes {
  grid-column: 1/-1;
}
.notes > textarea {
  min-height: 8rem;
}

.closed {
  display: none;
}
.open {
  display: flex;
}

.back-button {
  background-color: var(--bright);
  display: inline;
  padding: 1ch;
}

.spacer-small {
  height: 16px;
}

.details-table {
  max-width: 90ch;
  margin: 0 auto;
}

.details-table > tbody > tr > :first-child {
  text-transform: capitalize;
  text-align: right;
}

.details-table > tbody > tr > :nth-child(2) {
  text-align: left;
}

.details-table > tbody > tr > td {
  padding: 16px 6px;
}

.details-work-details-wrapper {
  width: 100%;
}
.details-composition-data {
  margin: 28px 0px;
}
.details-work-title-wrapper {
}
.details-title {
  text-align: left;
  font-size: 2rem;
}
.details-subtitle {
  text-align: left;
  font-size: 1.3rem;
}

.details-year {
  text-align: left;
  font-size: 1.2rem;
}
.details-instrumentation {
}
.details-category {
}
.details-notes {
}

@media only screen and (max-width: 980px) {
  .edit-form {
    display: flex;
    flex-direction: column !important;
  }
}

@media only screen and (max-width: 767px) {
  .composition-data {
    display: flex;
    flex-direction: column;
    /* grid-template-columns: 25% auto; */
    row-gap: 0px;
    justify-content: start;
  }

  .composition-data > * {
    display: grid;
    grid-template-columns: 13ch 1fr 1fr;
    column-gap: 1ch;
    row-gap: 0px;
    box-sizing: border-box;
    align-items: start;
    padding: 4px;
    /* width: 100%; */
  }
  .composition-data > *::before {
    min-width: 13ch;
    text-align: right;
    padding-right: 1ch;
  }

  .year {
    justify-content: start;
  }

  label > .year {
    width: 100%;
  }

  .year::before {
    content: 'Year: ';
  }

  .work-title-wrapper {
    display: grid;
    width: 100%;
    align-items: center;
  }

  .title,
  .subtitle {
    grid-column: 2 / span 2;
  }

  form > .work-title-wrapper {
    display: flex;
  }
  form > .work-title-wrapper > *,
  form > .work-title-wrapper > * > *,
  form > .work-title-wrapper > * > label > .title {
    width: 100%;
  }

  form > .work-title-wrapper::before {
    content: none;
  }

  .work-title-wrapper::before {
    content: 'Title: ';
    grid-row: 1 / span 2;
  }

  .subtitle::before {
    content: 'content';
  }

  .instrumentation::before {
    content: 'Instrumentation: ';
  }

  .category::before {
    content: 'Category: ';
  }

  .category {
    text-align: left;
    justify-content: start;
  }

  .composition-data-key {
    display: none;
  }
}

